scode/TeamDigital/prob15/error.txt
  File "/var/www/html/scode/TeamDigital/prob15/main.py", line 5
    for i in range(f:l+1) :
                    ^
SyntaxError: invalid syntax
